Fix version expectations for Jackson dependencies
Generally the versions all match that of the BOM - it is only when a patch release is done for, say, databind alone that they become out-of-sync.

--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -139,6 +139,7 @@ final Map<String, String> v = [
   h2                  : versionOf(libraries.h2),
   hamcrest            : versionOf(libraries.hamcrest),
   hibernate           : versionOf(libraries.hibernate),
+  jacksonBom          : versionOf(libraries.jacksonBom),
   javaAssist          : versionOf(libraries.javaAssist),
   javaxAnnotation     : versionOf(libraries.javaxAnnotation),
   jaxb                : versionOf(libraries.jaxbBom),
