--- a/agent/build.gradle
+++ b/agent/build.gradle
@@ -162,9 +162,9 @@ task verifyJar(type: VerifyJarTask) {
       "httpmime-${project.versions.apacheHttpComponents}.jar",
       "istack-commons-runtime-4.0.1.jar",
       "j2objc-annotations-1.3.jar",
-      "jackson-annotations-2.13.2.jar",
-      "jackson-core-2.13.2.jar",
-      "jackson-databind-2.13.2.2.jar",
+      "jackson-annotations-${project.versions.jacksonBom}.jar",
+      "jackson-core-${project.versions.jacksonBom}.jar",
+      "jackson-databind-${project.versions.jacksonBom}.jar",
       "jakarta.activation-2.0.1.jar",
       "javax.annotation-api-${project.versions.javaxAnnotation}.jar",
       "javax.inject-1.jar",
