Correct Windows registry string padding for distVersion
It's moot now for most normal installers off master since they are all 5 digit #s of commits, but when one builds off a branch the commit count resets, so with previous incorrect implementation `9` becomes `90000` and `10` becomes `10000` and it won't let you upgrade :-)

--- a/installers/windows.gradle
+++ b/installers/windows.gradle
@@ -129,7 +129,7 @@ def executeNSIS(InstallerType installerType, File buildRoot, File destDir) {
   def outputFile = project.file("${destDir.path}/${installerType.baseName}-${project.fullVersion}-jre-${flavor}-setup.exe")
 
   // pad enough zeros to be able to convert the version string using simple numbers, instead of version numbers
-  def registryVersionString = "${project.goVersion.split(/\./).collect { it.padLeft(2, '0') }.join()}${project.distVersion.padRight(5, '0')}"
+  def registryVersionString = "${project.goVersion.split(/\./).collect { it.padLeft(2, '0') }.join()}${project.distVersion.padLeft(5, '0')}"
 
   def installerContents = project.file("${buildRoot.path}/${installerType.baseName}-${project.goVersion}")
 
