--- a/installers/include/wrapper-license-linux-go-server.conf
+++ b/installers/include/wrapper-license-linux-go-server.conf
@@ -4,14 +4,14 @@
 
 #encoding=UTF-8
 wrapper.license.type=DEV
-wrapper.license.id=202105080000025
+wrapper.license.id=202205130000007
 wrapper.license.licensee=ThoughtWorks
 wrapper.license.group=Go
 wrapper.license.dev_application=GoCD Server On Linux
 wrapper.license.features=64bit
 wrapper.license.upgrade_term.begin_date=2008-06-03
-wrapper.license.upgrade_term.end_date=2022-06-03
-wrapper.license.key.1=bee6-bf24-b9a9-c69a
-wrapper.license.key.2=2023-69ca-8079-f767
-wrapper.license.key.3=493f-a18a-53b0-a4d3
-wrapper.license.key.4=2f32-d91a-9fbe-7c27
+wrapper.license.upgrade_term.end_date=2023-06-03
+wrapper.license.key.1=94ae-e1cb-1fe9-8446
+wrapper.license.key.2=e41f-0f78-907d-a749
+wrapper.license.key.3=8c84-74bf-828f-cd70
+wrapper.license.key.4=12a0-ef48-ca43-f386
