--- a/installers/include/wrapper-license-relative-path-go-agent.conf
+++ b/installers/include/wrapper-license-relative-path-go-agent.conf
@@ -1,17 +1,17 @@
-# Tanuki license keys for GoCD Agent using absolute paths (uses the following license params):
+# Tanuki license keys for GoCD Agent using relative paths (uses the following license params):
 # wrapper.java.mainclass=org.tanukisoftware.wrapper.WrapperJarApp
 # wrapper.app.parameter.1=lib/agent-bootstrapper.jar
 
 #encoding=UTF-8
 wrapper.license.type=DEV
-wrapper.license.id=202105080000005
+wrapper.license.id=202205130000027
 wrapper.license.licensee=ThoughtWorks
 wrapper.license.group=Go
 wrapper.license.dev_application=GoCD Agent
 wrapper.license.features=64bit
 wrapper.license.upgrade_term.begin_date=2008-06-03
-wrapper.license.upgrade_term.end_date=2022-06-03
-wrapper.license.key.1=d654-fc5a-80c1-b244
-wrapper.license.key.2=973e-f24c-3ab3-50ba
-wrapper.license.key.3=81e1-7250-a620-449e
-wrapper.license.key.4=c6dd-9cee-ce51-1d14
+wrapper.license.upgrade_term.end_date=2023-06-03
+wrapper.license.key.1=26ef-d0ba-3674-c88b
+wrapper.license.key.2=b7ed-6425-0dbe-506a
+wrapper.license.key.3=dade-57bc-462b-346e
+wrapper.license.key.4=97d6-41f5-aba0-f275
