--- a/installers/include/wrapper-license-relative-path-go-server.conf
+++ b/installers/include/wrapper-license-relative-path-go-server.conf
@@ -1,17 +1,17 @@
-# Tanuki license keys for GoCD Server using absolute paths (uses the following license params):
+# Tanuki license keys for GoCD Server using relative paths (uses the following license params):
 # wrapper.java.mainclass=org.tanukisoftware.wrapper.WrapperJarApp
 # wrapper.app.parameter.1=lib/go.jar
 
 #encoding=UTF-8
 wrapper.license.type=DEV
-wrapper.license.id=202105080000004
+wrapper.license.id=202205130000028
 wrapper.license.licensee=ThoughtWorks
 wrapper.license.group=Go
 wrapper.license.dev_application=GoCD Server
 wrapper.license.features=64bit
 wrapper.license.upgrade_term.begin_date=2008-06-03
-wrapper.license.upgrade_term.end_date=2022-06-03
-wrapper.license.key.1=8d0e-5765-9106-60a0
-wrapper.license.key.2=4db9-49e3-a54d-c7ed
-wrapper.license.key.3=d2ef-824e-c02a-9669
-wrapper.license.key.4=6515-73b6-c71b-8c5b
+wrapper.license.upgrade_term.end_date=2023-06-03
+wrapper.license.key.1=2d2c-52a3-4cb8-487c
+wrapper.license.key.2=c47f-250b-362a-5166
+wrapper.license.key.3=94ea-1556-3336-0b24
+wrapper.license.key.4=1cdc-9201-b2ff-04f9
