Replace deprecated Jasmine Ruby gem with jasmine-browser-runner
As recommended at https://github.com/jasmine/jasmine-gem#discontinued

Unfortunately using this approach doesn't seem to have a nice way to keep the Rails assets continually compiled for a nice development loop due to the need to recompile assets via Rail asset pipeline. Which seems to be very slow. But this seems better than the old, discontinued approach anyway, with fewer hacks.

--- a/server/build.gradle
+++ b/server/build.gradle
@@ -602,7 +602,7 @@ task prepareNoRails {
 }
 
 task prepare {
-  dependsOn = [prepareNoRails, prepareTestGitRepo, ':server:compileAssetsDev']
+  dependsOn = [prepareNoRails, prepareTestGitRepo, ':server:compileAssetsWebpackDev']
 }
 
 test {
