--- a/server/src/main/webapp/WEB-INF/rails/package.json
+++ b/server/src/main/webapp/WEB-INF/rails/package.json
@@ -7,7 +7,9 @@
     "webpack-dev": "webpack --config webpack/config/webpack.config.ts --color --mode=development",
     "webpack-prod": "webpack --config webpack/config/webpack.config.ts --color --mode=production",
     "jasmine-ci": "karma start --single-run",
-    "karma": "karma start",
+    "jasmine-server": "karma start",
+    "jasmine-old-ci": "jasmine-browser-runner runSpecs --config=spec/javascripts/support/jasmine-browser.js",
+    "jasmine-old-server": "jasmine-browser-runner serve --config=spec/javascripts/support/jasmine-browser.js",
     "eslint": "eslint --color --ext .js --ext .msx --format stylish webpack/ spec/webpack/ --ignore-pattern gen/",
     "eslintold": "eslint --no-eslintrc --config .eslintrc-old.json --color --ext .js  --format stylish app/assets/javascripts/ spec/javascripts/",
     "tslint": "yarn run tslint:prod && yarn run tslint:spec",
@@ -84,7 +86,9 @@
     "html-webpack-plugin": "^4.5.2",
     "jasmine": "^4.1.0",
     "jasmine-ajax": "^4.0.0",
+    "jasmine-browser-runner": "^1.0.0",
     "jasmine-core": "^4.1.1",
+    "jasmine-jquery": "^2.1.1",
     "karma": "^6.3.20",
     "karma-chrome-launcher": "^3.1.1",
     "karma-firefox-launcher": "^2.1.2",
