Declare dependencies correctly for compiling non-JS assets
Rail Sass compilation requires bourbon (and possibly other stuff) installed via JS and included via `node_modules`. Previously this worked through alphabetical dependency ordering (luck) but after renaming the JS is no longer guaranteed to be installed in time. Need to add an explicit dependency.

--- a/server/rails.gradle
+++ b/server/rails.gradle
@@ -229,6 +229,7 @@ task compileAssetsRailsTest(type: ExecuteUnderRailsTask) {
 }
 
 task compileAssetsRailsProd(type: ExecuteUnderRailsTask) {
+  dependsOn yarnInstall
   outputs.cacheIf { true }
   onlyIf { !project.hasProperty('fastBuild') }
 
