--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -23,7 +23,7 @@ dependencies {
   implementation project(':config:config-api')
   implementation project(':commandline')
   implementation project(':plugin-infra:plugin-metadata-store')
-  implementation project.deps.javaxAnnotation
+  implementation project.deps.jakartaAnnotation
   implementation project.deps.commonsCollections4
   implementation project.deps.commonsText
   implementation project.deps.cloning
