--- a/server/build.gradle
+++ b/server/build.gradle
@@ -863,8 +863,8 @@ task verifyWar(type: VerifyJarTask) {
         "jackson-core-${project.versions.jacksonBom}.jar",
         "jackson-databind-${project.versions.jacksonBom}.jar",
         "jakarta.activation-2.0.1.jar",
+        "jakarta.annotation-api-${project.versions.jakartaAnnotation}.jar",
         "javassist-${project.versions.javaAssist}.jar",
-        "javax.annotation-api-${project.versions.javaxAnnotation}.jar",
         "javax.inject-1.jar",
         "javax.servlet-api-${project.versions.servletApi}.jar",
         "jakarta.xml.bind-api-3.0.1.jar",
