--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -61,8 +61,8 @@ final Map<String, String> libraries = [
   hibernate           : 'org.hibernate:hibernate-ehcache:3.6.10.Final',
   httpClientMock      : 'com.github.paweladamski:HttpClientMock:1.10.0',
   jacksonBom          : 'com.fasterxml.jackson:jackson-bom:2.13.3',
+  jakartaAnnotation   : 'jakarta.annotation:jakarta.annotation-api:1.3.5',
   javaAssist          : 'javassist:javassist:3.12.1.GA',
-  javaxAnnotation     : 'javax.annotation:javax.annotation-api:1.3.2',
   jaxbBom             : 'org.glassfish.jaxb:jaxb-bom:3.0.2',
   jaxen               : 'jaxen:jaxen:1.2.0',
   jcommander          : 'com.beust:jcommander:1.82',
@@ -141,7 +141,7 @@ final Map<String, String> v = [
   hibernate           : versionOf(libraries.hibernate),
   jacksonBom          : versionOf(libraries.jacksonBom),
   javaAssist          : versionOf(libraries.javaAssist),
-  javaxAnnotation     : versionOf(libraries.javaxAnnotation),
+  jakartaAnnotation   : versionOf(libraries.jakartaAnnotation),
   jaxb                : versionOf(libraries.jaxbBom),
   jaxen               : versionOf(libraries.jaxen),
   jcommander          : versionOf(libraries.jcommander),
