--- a/server/build.gradle
+++ b/server/build.gradle
@@ -800,6 +800,8 @@ task verifyWar(type: VerifyJarTask) {
         "activemq-broker-${project.versions.activeMQ}.jar",
         "activemq-client-${project.versions.activeMQ}.jar",
         "activemq-openwire-legacy-${project.versions.activeMQ}.jar",
+        "angus-activation-1.0.0.jar",
+        "angus-core-1.0.0.jar",
         "animal-sniffer-annotations-1.9.jar",
         "ant-${project.versions.apacheAnt}.jar",
         "antlr-2.7.6.jar",
@@ -864,6 +866,7 @@ task verifyWar(type: VerifyJarTask) {
         "jackson-databind-${project.versions.jacksonBom}.jar",
         "jakarta.activation-api-2.1.0.jar",
         "jakarta.annotation-api-${project.versions.jakartaAnnotation}.jar",
+        "jakarta.mail-api-${project.versions.mail}.jar",
         "jakarta.servlet-api-${project.versions.servletApi}.jar",
         "jakarta.xml.bind-api-4.0.0.jar",
         "javassist-${project.versions.javaAssist}.jar",
@@ -882,7 +885,6 @@ task verifyWar(type: VerifyJarTask) {
         "jta-1.1.jar",
         "liquibase-core-${project.versions.liquibase}.jar",
         "listenablefuture-9999.0-empty-to-avoid-conflict-with-guava.jar",
-        "mailapi-${project.versions.mail}.jar",
         "mybatis-${project.versions.mybatis}.jar",
         "mybatis-spring-${project.versions.mybatisSpring}.jar",
         "mysql-connector-java-${project.versions.mysql}.jar",
@@ -897,7 +899,7 @@ task verifyWar(type: VerifyJarTask) {
         "rack_hack-${project.version}.jar",
         "semantic-version-${project.versions.semanticVersion}.jar",
         "slf4j-api-${project.versions.slf4j}.jar",
-        "smtp-${project.versions.mail}.jar",
+        "smtp-${project.versions.mailSmtp}.jar",
         "spark-core-${project.versions.spark}.jar",
         "spring-aop-${project.versions.spring}.jar",
         "spring-beans-${project.versions.spring}.jar",
