Migrate Servlet API dependency to Jakarta Servlet API namespace
Technically we shouldn't be using Servlet API 4 as Jetty 9.4 is only Servlet API 3 compliant. It's been this way for a while though and doesn't seem to be causing issues, so leaving it for now.

--- a/build.gradle
+++ b/build.gradle
@@ -668,6 +668,10 @@ subprojects {
       if (details.requested.group == 'javax.annotation' && details.requested.name == 'javax.annotation-api') {
         details.useTarget project.deps.jakartaAnnotation
       }
+      // Javax Servlet API has migrated to jakarta Servlet API
+      if (details.requested.group == 'javax.servlet' && details.requested.name == 'javax.servlet-api') {
+        details.useTarget project.deps.servletApi
+      }
     }
   }
 
