--- a/server/build.gradle
+++ b/server/build.gradle
@@ -864,10 +864,10 @@ task verifyWar(type: VerifyJarTask) {
         "jackson-databind-${project.versions.jacksonBom}.jar",
         "jakarta.activation-2.0.1.jar",
         "jakarta.annotation-api-${project.versions.jakartaAnnotation}.jar",
+        "jakarta.servlet-api-${project.versions.servletApi}.jar",
+        "jakarta.xml.bind-api-3.0.1.jar",
         "javassist-${project.versions.javaAssist}.jar",
         "javax.inject-1.jar",
-        "javax.servlet-api-${project.versions.servletApi}.jar",
-        "jakarta.xml.bind-api-3.0.1.jar",
         "jaxb-core-${project.versions.jaxb}.jar",
         "jaxb-runtime-${project.versions.jaxb}.jar",
         "jaxen-${project.versions.jaxen}.jar",
