--- a/agent/build.gradle
+++ b/agent/build.gradle
@@ -167,9 +167,9 @@ task verifyJar(type: VerifyJarTask) {
       "jackson-databind-${project.versions.jacksonBom}.jar",
       "jakarta.activation-2.0.1.jar",
       "jakarta.annotation-api-${project.versions.jakartaAnnotation}.jar",
-      "javax.inject-1.jar",
-      "javax.servlet-api-${project.versions.servletApi}.jar",
+      "jakarta.servlet-api-${project.versions.servletApi}.jar",
       "jakarta.xml.bind-api-3.0.1.jar",
+      "javax.inject-1.jar",
       "jaxb-core-${project.versions.jaxb}.jar",
       "jaxb-runtime-${project.versions.jaxb}.jar",
       "jcl-over-slf4j-${project.versions.slf4j}.jar",
