--- a/tfs-impl/tfs-impl-14/build.gradle
+++ b/tfs-impl/tfs-impl-14/build.gradle
@@ -14,16 +14,15 @@
  * limitations under the License.
  */
 
+import com.thoughtworks.go.build.DownloadFile
 import com.thoughtworks.go.build.VerifyJarTask
+import org.apache.commons.codec.digest.DigestUtils
 
 description = 'GoCD TFS SDK wrapper v14'
 
 dependencies {
   implementation project(':common')
-
-  // Don't upgrade unless you have to!
-  // https://github.com/Microsoft/team-explorer-everywhere/issues/268
-  implementation files('tfssdk/lib/com.microsoft.tfs.sdk-14.118.0.jar')
+  implementation files("${project.buildDir}/tfssdk/lib/com.microsoft.tfs.sdk-${project.versions.tfsSdk}.jar")
 
   testImplementation project.deps.junit5
   testRuntimeOnly project.deps.junit5Engine
@@ -36,18 +35,44 @@ jar {
   archiveClassifier = 'classes'
 }
 
+private File destFile(String url) {
+  new File(gradle.gradleUserHomeDir, "download-cache/${DigestUtils.md5Hex(url)}/${new File(new URL(url).path).name}")
+}
+
+task downloadTfsSdk(type: DownloadFile) {
+  def srcUrl = "https://github.com/microsoft/team-explorer-everywhere/releases/download/${project.versions.tfsSdk}/TFS-SDK-${project.versions.tfsSdk}.zip"
+  src srcUrl
+  dest destFile(srcUrl)
+  checksum project.versions.tfsSdkSha256sum
+}
+
+task extractTfsSdk(type: Copy) {
+  doFirst {
+    delete "${project.buildDir}/tfssdk"
+  }
+  dependsOn downloadTfsSdk
+  from(project.zipTree(downloadTfsSdk.outputs.files.singleFile)) {
+    include "*/redist/**"
+    eachFile { fcd ->
+      fcd.relativePath = new RelativePath(true, fcd.relativePath.segments.drop(2))
+    }
+    includeEmptyDirs = false
+  }
+  into "${project.buildDir}/tfssdk"
+}
+
+compileJava.dependsOn extractTfsSdk
+
 task fatJar(type: Jar) {
   finalizedBy 'verifyJar'
-  dependsOn jar
+  dependsOn extractTfsSdk, jar
   from(jar.archiveFile) { into('lib/') }
-
-  from(project.configurations.compileClasspath.findAll { it.absolutePath.contains('tfssdk') }) {
+  from("${extractTfsSdk.outputs.files.singleFile}/lib") {
+    include "*.jar"
     into 'lib/'
   }
-
-  from("${project.projectDir}/tfssdk/native") {
-    include "**/*.*"
-    into "tfssdk/native"
+  from("${extractTfsSdk.outputs.files.singleFile}/native") {
+    into 'tfssdk/native'
   }
 }
 
@@ -56,7 +81,7 @@ task verifyJar(type: VerifyJarTask) {
   expectedJars = [
       "lib": [
           "tfs-impl-14-${project.version}-classes.jar",
-          "com.microsoft.tfs.sdk-14.118.0.jar",
+          "com.microsoft.tfs.sdk-${project.versions.tfsSdk}.jar",
       ]
   ]
 }
