#10592 Explicitly specify the file encodings for Tanuki wrapper files
See https://wrapper.tanukisoftware.com/doc/english/props-directives.html - other encodings are possible, but this should help make it a bit more explicit to users if generating their own files programmatically.

--- a/installers/include/wrapper-license-linux-go-server.conf
+++ b/installers/include/wrapper-license-linux-go-server.conf
@@ -1,8 +1,10 @@
+#encoding=UTF-8
+# First line specifies encoding, see https://wrapper.tanukisoftware.com/doc/english/props-directives.html
+
 # Tanuki license keys for GoCD Server running on unix using absolute paths (uses the following license params):
 # wrapper.java.mainclass=org.tanukisoftware.wrapper.WrapperJarApp
 # wrapper.app.parameter.1=/usr/share/go-server/lib/go.jar
 
-#encoding=UTF-8
 wrapper.license.type=DEV
 wrapper.license.id=202205130000007
 wrapper.license.licensee=ThoughtWorks
