--- a/installers/include/wrapper-properties-go-agent.conf
+++ b/installers/include/wrapper-properties-go-agent.conf
@@ -1,5 +1,9 @@
+#encoding=UTF-8
+# First line specifies encoding, see https://wrapper.tanukisoftware.com/doc/english/props-directives.html
+
 # Use this file to configure your GoCD agent
 
+# Set any system properties. We recommend that you begin with the index `100` and increment the index for each system property
 # setup the GoCD server URL
 wrapper.app.parameter.100=-serverUrl
 wrapper.app.parameter.101=http://localhost:8153/go
