--- a/installers/include/wrapper-properties-go-server.conf
+++ b/installers/include/wrapper-properties-go-server.conf
@@ -1,1 +1,4 @@
+#encoding=UTF-8
+# First line specifies encoding, see https://wrapper.tanukisoftware.com/doc/english/props-directives.html
+
 # Use this file to configure your GoCD server
