--- a/installers/include/wrapper-license-relative-path-go-server.conf
+++ b/installers/include/wrapper-license-relative-path-go-server.conf
@@ -1,8 +1,10 @@
+#encoding=UTF-8
+# First line specifies encoding, see https://wrapper.tanukisoftware.com/doc/english/props-directives.html
+
 # Tanuki license keys for GoCD Server using relative paths (uses the following license params):
 # wrapper.java.mainclass=org.tanukisoftware.wrapper.WrapperJarApp
 # wrapper.app.parameter.1=lib/go.jar
 
-#encoding=UTF-8
 wrapper.license.type=DEV
 wrapper.license.id=202205130000028
 wrapper.license.licensee=ThoughtWorks
