Fix warning during license generation on TFS SDK wrapper

--- a/tfs-impl/tfs-impl-14/build.gradle
+++ b/tfs-impl/tfs-impl-14/build.gradle
@@ -62,6 +62,7 @@ task extractTfsSdk(type: Copy) {
 }
 
 compileJava.dependsOn extractTfsSdk
+generateLicenseReport.dependsOn extractTfsSdk
 
 task fatJar(type: Jar) {
   finalizedBy 'verifyJar'
