Correct files with GoCD license incorrectly applied over the top of vendor licenses

--- a/build.gradle
+++ b/build.gradle
@@ -301,18 +301,15 @@ subprojects {
       exclude '**/available.toggles'
       exclude '**/META-INF/services/*'
       exclude '**/node_modules/**'
+      exclude '**/node-vendor/**'
+      exclude '**/vendor/**'
       exclude '**/javascripts/lib/**'
       exclude '**/gems/jruby/**'
       exclude '**/tmp/**'
       exclude '**/logs/**'
       exclude '**/log/**'
-      exclude '**/RubyRipper.java'
       exclude '**/reset-fonts-grids.scss'
-      exclude '**/mock-ajax.js'
-      exclude '**/mithril.js'
-      exclude '**/crel.js'
       exclude '**/JavaVersion.java'
-      exclude '**/ansi_up.js'
       exclude '**/robots.txt'
       exclude '**/rails/bin/**'
 
