--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -100,7 +100,7 @@ final Map<String, String> libraries = [
   springSecurity      : 'org.springframework.security:spring-security-config:4.2.20.RELEASE',
   springTestJunit5    : 'com.github.sbrannen:spring-test-junit5:1.5.0',
   systemStubs         : 'uk.org.webcompere:system-stubs-jupiter:2.0.1',
-  testcontainers      : 'org.testcontainers:testcontainers:1.17.3',
+  testcontainersBom   : 'org.testcontainers:testcontainers-bom:1.17.3',
   tinybundles         : 'org.ops4j.pax.tinybundles:tinybundles:3.0.0',
   tokenBucket         : 'org.isomorphism:token-bucket:1.7',
   urlrewrite          : 'org.tuckey:urlrewritefilter:3.2.0',
@@ -171,7 +171,6 @@ final Map<String, String> v = [
   spark               : versionOf(libraries.spark),
   spring              : versionOf(libraries.spring),
   springSecurity      : versionOf(libraries.springSecurity),
-  testcontainers      : versionOf(libraries.testcontainers),
   tokenBucket         : versionOf(libraries.tokenBucket),
   urlrewrite          : versionOf(libraries.urlrewrite),
   velocity            : versionOf(libraries.velocity),
@@ -224,10 +223,11 @@ final Map<String, String> related = [
   springTx                : "org.springframework:spring-tx:${v.spring}",
   springWeb               : "org.springframework:spring-web:${v.spring}",
   springWebmvc            : "org.springframework:spring-webmvc:${v.spring}",
-  testcontainersJdbc      : "org.testcontainers:jdbc:${v.testcontainers}",
-  testcontainersJunit     : "org.testcontainers:junit-jupiter:${v.testcontainers}",
-  testcontainersMysql     : "org.testcontainers:mysql:${v.testcontainers}",
-  testcontainersPostgresql: "org.testcontainers:postgresql:${v.testcontainers}",
+  testcontainers          : "org.testcontainers:testcontainers",
+  testcontainersJdbc      : "org.testcontainers:jdbc",
+  testcontainersJunit     : "org.testcontainers:junit-jupiter",
+  testcontainersMysql     : "org.testcontainers:mysql",
+  testcontainersPostgresql: "org.testcontainers:postgresql",
   xmlUnitMatchers         : "org.xmlunit:xmlunit-matchers:${v.xmlUnit}",
 ]
 
