--- a/installers/osx.gradle
+++ b/installers/osx.gradle
@@ -29,6 +29,7 @@ task downloadOsxJreChecksum(type: DownloadFile) {
     project.packaging.adoptOpenjdk.featureVersion,
     project.packaging.adoptOpenjdk.interimVersion,
     project.packaging.adoptOpenjdk.updateVersion,
+    project.packaging.adoptOpenjdk.patchVersion,
     project.packaging.adoptOpenjdk.buildVersion
   )
   src srcUrl
@@ -42,6 +43,7 @@ task downloadOsxJre(type: DownloadFile) {
     project.packaging.adoptOpenjdk.featureVersion,
     project.packaging.adoptOpenjdk.interimVersion,
     project.packaging.adoptOpenjdk.updateVersion,
+    project.packaging.adoptOpenjdk.patchVersion,
     project.packaging.adoptOpenjdk.buildVersion
   )
   src srcUrl
