--- a/installers/windows.gradle
+++ b/installers/windows.gradle
@@ -31,6 +31,7 @@ task downloadWindowsJreChecksum(type: DownloadFile) {
     project.packaging.adoptOpenjdk.featureVersion,
     project.packaging.adoptOpenjdk.interimVersion,
     project.packaging.adoptOpenjdk.updateVersion,
+    project.packaging.adoptOpenjdk.patchVersion,
     project.packaging.adoptOpenjdk.buildVersion
   )
   src srcUrl
@@ -44,6 +45,7 @@ task downloadWindowsJre(type: DownloadFile) {
     project.packaging.adoptOpenjdk.featureVersion,
     project.packaging.adoptOpenjdk.interimVersion,
     project.packaging.adoptOpenjdk.updateVersion,
+    project.packaging.adoptOpenjdk.patchVersion,
     project.packaging.adoptOpenjdk.buildVersion
   )
   src srcUrl
