--- a/server/src/main/webapp/WEB-INF/rails/Gemfile
+++ b/server/src/main/webapp/WEB-INF/rails/Gemfile
@@ -2,13 +2,15 @@ source 'https://rubygems.org'
 ruby '2.6.8'
 
 gem 'rails'
-gem 'sass-rails'
-
-gem 'js-routes'
-gem 'ts_routes'
 
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
 gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
+
+group :assets do
+  gem 'sass-rails'
+  gem 'js-routes'
+  gem 'ts_routes'
+end
 
 group :development, :test do
   # make sure to `System.setProperty("jruby.runtime.arguments", "--debug")` before opening up pry
