Ensure SLF4J dependency has consistent version across projects
Some projects don't declare a direct dependency, so this ensures the same version is applied to transitives.

--- a/build-platform/build.gradle
+++ b/build-platform/build.gradle
@@ -21,6 +21,7 @@ dependencies {
     api project.deps.commonsCollections
     api project.deps.commonsBeanUtils
     api project.deps.objenesis
+    api project.deps.slf4j
   }
 
   api enforcedPlatform(project.deps.junit5Bom)
