Correct packaging exclusions
- Exclude dud log files
- Exclude binary scripts (these are confusing anyway, as some point to dev/test assets)
- Replace legacy `build_info` exclusion with excluding `extensions` which exist in some Gems
- Exclude cached gems in more canonical manner

--- a/server/build.gradle
+++ b/server/build.gradle
@@ -709,17 +709,19 @@ task configureWar {
       into '/'
       exclude('WEB-INF/web.xml')
       exclude("**/rails/*.log")
-      exclude("**/rails/log/*")
+      exclude("**/rails/log*")
       exclude("**/rails/node_modules/")
       exclude("**/rails/spec/")
       exclude("**/rails/tmp/")
-      exclude("**/rails/**/jruby/*/cache/*.gem")
       exclude("**/rails/app/assets/")
       exclude("**/rails/webpack/")
-    new JsonSlurper().parse(findGemsToNotPack.outputFile).each { gem ->
+
+      exclude("**/rails/gems/jruby/${project.bundledGemRubyVersion}/bin")
+      exclude("**/rails/gems/jruby/${project.bundledGemRubyVersion}/cache")
+      new JsonSlurper().parse(findGemsToNotPack.outputFile).each { gem ->
         theSpec.exclude("**/rails/gems/jruby/${project.bundledGemRubyVersion}/gems/${gem}")
         theSpec.exclude("**/rails/gems/jruby/${project.bundledGemRubyVersion}/specifications/${gem}.gemspec")
-        theSpec.exclude("**/rails/gems/jruby/${project.bundledGemRubyVersion}/build_info/${gem}.info")
+        theSpec.exclude("**/rails/gems/jruby/${project.bundledGemRubyVersion}/extensions/**/${gem}")
       }
     }
   }
