Fix Gradle dependency warning
Not sure how to deal with these dependencies more elegantly but this will have to do for now...

--- a/tfs-impl/tfs-impl-14/build.gradle
+++ b/tfs-impl/tfs-impl-14/build.gradle
@@ -63,6 +63,7 @@ task extractTfsSdk(type: Copy) {
 
 compileJava.dependsOn extractTfsSdk
 generateLicenseReport.dependsOn extractTfsSdk
+rootProject.generateLicenseReport.dependsOn extractTfsSdk
 
 task fatJar(type: Jar) {
   finalizedBy 'verifyJar'
