Fix ASDF tool versions to avoid confusing GoCD tests

--- a/server/build.gradle
+++ b/server/build.gradle
@@ -708,6 +708,7 @@ task configureWar {
     war.from(project.webAppDir) { theSpec ->
       into '/'
       exclude('WEB-INF/web.xml')
+      exclude("**/rails/.tool-versions")
       exclude("**/rails/*.log")
       exclude("**/rails/log/")
       exclude("**/rails/logs/")
