Revert "Migrate from sass-rails 5 to sassc-rails 2.1"

--- a/server/src/main/webapp/WEB-INF/rails/Gemfile
+++ b/server/src/main/webapp/WEB-INF/rails/Gemfile
@@ -7,7 +7,7 @@ gem 'rails'
 gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
 
 group :assets do
-  gem 'sassc-rails'
+  gem 'sass-rails'
   gem 'js-routes'
   gem 'ts_routes'
 end
