--- a/server/src/main/webapp/WEB-INF/rails/package.json
+++ b/server/src/main/webapp/WEB-INF/rails/package.json
@@ -10,6 +10,8 @@
     "jasmine-server": "karma start",
     "jasmine-old-ci": "jasmine-browser-runner runSpecs --config=spec/javascripts/support/jasmine-browser.js",
     "jasmine-old-server": "jasmine-browser-runner serve --config=spec/javascripts/support/jasmine-browser.js",
+    "stylelintold": "stylelint --color app/assets/new_stylesheets/**/*.scss",
+    "stylelintold:fix": "yarn run stylelintold --fix",
     "eslint": "eslint --color --ext .js --ext .msx --format stylish webpack/ spec/webpack/ --ignore-pattern gen/",
     "eslintold": "eslint --no-eslintrc --config .eslintrc-old.json --color --ext .js  --format stylish app/assets/javascripts/ spec/javascripts/",
     "tslint": "yarn run tslint:prod && yarn run tslint:spec",
@@ -115,6 +117,8 @@
     "speed-measure-webpack-plugin": "^1.5.0",
     "stats-webpack-plugin": "^0.7.0",
     "style-loader": "^2.0.0",
+    "stylelint": "^14.11.0",
+    "stylelint-config-standard-scss": "^5.0.0",
     "thread-loader": "^3.0.4",
     "ts-loader": "^8.3.0",
     "ts-node": "^10.9.1",
