Exclude bundler magic for git-based dependencies
This is only used for sassc, so it's safe to exclude this for now, and we should not be depending on a Git-based dependency for anything production so should be safe to do so.

--- a/server/build.gradle
+++ b/server/build.gradle
@@ -511,7 +511,7 @@ task findGemsToNotPack {
   inputs.file("${project.railsRoot}/Gemfile")
   inputs.file("${project.railsRoot}/Gemfile.lock")
   inputs.file("find-gems-to-package.rake")
-  ext.outputFile = file("${project.buildDir}/gems-to-package.json")
+  ext.outputFile = file("${project.buildDir}/gems-to-not-package.json")
   outputs.file(outputFile)
   outputs.cacheIf { true }
 
@@ -723,8 +723,9 @@ task configureWar {
       exclude("**/rails/app/assets/")
       exclude("**/rails/webpack/")
 
-      exclude("**/rails/gems/jruby/${project.bundledGemRubyVersion}/bin")
-      exclude("**/rails/gems/jruby/${project.bundledGemRubyVersion}/cache")
+      exclude("**/rails/gems/jruby/${project.bundledGemRubyVersion}/bin/")
+      exclude("**/rails/gems/jruby/${project.bundledGemRubyVersion}/bundler/")
+      exclude("**/rails/gems/jruby/${project.bundledGemRubyVersion}/cache/")
       new JsonSlurper().parse(findGemsToNotPack.outputFile).each { gem ->
         theSpec.exclude("**/rails/gems/jruby/${project.bundledGemRubyVersion}/gems/${gem}")
         theSpec.exclude("**/rails/gems/jruby/${project.bundledGemRubyVersion}/specifications/${gem}.gemspec")
