Temporarily use latest unreleased version of sass-embedded
Trying to test fix for Windows installation

--- a/server/src/main/webapp/WEB-INF/rails/Gemfile
+++ b/server/src/main/webapp/WEB-INF/rails/Gemfile
@@ -10,6 +10,7 @@ group :assets do
   gem 'sassc-rails'
   gem 'sassc', github: 'sass/sassc-ruby', ref: 'refs/pull/233/head'
   gem 'sassc-embedded'
+  gem 'sass-embedded', github: 'ntkme/sass-embedded-host-ruby', ref: 'main'
   gem 'js-routes'
   gem 'ts_routes'
 end
