Add missing dependency on yarn install
This is needed for stuff like bourbon which is installed via Yarn, but used within Rails SCSS.

--- a/server/rails.gradle
+++ b/server/rails.gradle
@@ -196,6 +196,7 @@ task compileAssetsWebpackProd(type: YarnRunTask) {
 }
 
 task compileAssetsRailsTest(type: ExecuteUnderRailsTask) {
+  dependsOn yarnInstall
   outputs.cacheIf { true }
   onlyIf { !project.hasProperty('fastBuild') }
 
